Removed duplicate methods between org.opends.quicksetup.util.Utils and com.forgerock.opendj.cli.Utils. Code cleanup.